# CE2103-TEC-Media-File-System

./: REAME.md
streaming/: .gitignore  CMakeLists.txt  Cliente.cpp  Server.cpp  nodo.cpp
streaming/lib/: ControllerNode.cpp  ControllerNode.h  Funcs.cpp  Funcs.h
streaming/lib/Sockets/: ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
video-player/: CMakeLists.txt  Funcs.cpp  Funcs.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videowidget.cpp  videowidget.h  videowidget.ui
video-player/Sockets/: ClientSocket.cpp  ClientSocket.h  Protocolo.h  Socket.h
